[tool.poetry]
name = "twdata"
version = "0.1.0"
description = "Harvest Tribal Wars data into s3"
authors = ["Floris <florisvanrossum@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.36.15"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
